@@ -4,11 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>jQuery MultiSelect Plugin by Eric Hynds</title>
 <link href="jquery.multiselect.css" rel="stylesheet" type="text/css" />
-<link type="text/css" rel="stylesheet" href="http://jqueryui.com/themes/base/ui.all.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js" type="text/javascript"></script>
-<script src="http://jqueryui.com/themeroller/themeswitchertool/" type="text/javascript"></script>
-<script src="src/jquery.bgiframe.js" type="text/javascript"></script>
-<script src="src/jquery.multiselect.js" type="text/javascript"></script>
+<link type="text/css" rel="stylesheet" href="jquery-ui-1.8rc3.custom.css" />
 
 <style type="text/css">
 body { font:12px Helvetical, Arial, sans-serif; padding-bottom:200px }
@@ -26,13 +22,19 @@ a { color:#001371 }
 select {  }
 </style>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js" type="text/javascript"></script>
+<!--<script src="http://jqueryui.com/themeroller/themeswitchertool/" type="text/javascript"></script>-->
+<script src="src/jquery.bgiframe.js" type="text/javascript"></script>
+<script src="src/jquery.multiselect.js" type="text/javascript"></script>
+
+
 <script type="text/javascript">
 $(function(){
 	
 	// notice how you can overwrite the defaults for instances
 	$.fn.multiSelect.defaults.minWidth = 205;
 	
-	$('#themeswitcher').themeswitcher({ loadTheme: 'lightness' });
+	// $('#themeswitcher').themeswitcher({ loadTheme: 'lightness' });
 	 
 	// default options
 	$("select.multiselect").multiSelect();
@@ -96,6 +98,11 @@ $(function(){
 		},
 		minWidth: 225
 	});
+
+	// open by default
+	$("#example10").multiSelect({ 
+		state: 'open'
+	});
 	
 	$("#examples").submit(function(e){
 		var data = $(this).serialize();
@@ -124,7 +131,7 @@ $(function(){
 	<li><a href="http://www.erichynds.com/jquery/jquery-multiselect-plugin-with-themeroller-support/">Documentation, blog post, and comments</a></li>
 	</ul>
 
-	<p></p><div id="themeswitcher"></div>
+	<!-- <p></p><div id="themeswitcher"></div> -->
 	
 	<form action="" method="post" id="examples">
 	<h2>Example 1: Basic</h2>
@@ -244,8 +251,19 @@ $(function(){
 		<option value="option7">Option 7</option>
 		</select>
 	</p>
+
+	<h2>Example 8: Open by default</h2>
+	<p>
+		<select name="example10" id="example10" multiple="multiple" size="5">
+		<option value="option1">Option 1</option>
+		<option value="option2">Option 2</option>
+		<option value="option3">Option 3</option>
+		<option value="option4">Option 4</option>
+		<option value="option5">Option 5</option>
+		</select>
+	</p>
 	
-	<h2>Example 8: Multiple instances in-line</h2>
+	<h2>Example 9: Multiple instances in-line</h2>
 	<p>
 		<select name="example8" class="multiselect" multiple="multiple" size="5">
 		<option value="option1">Option 1</option>
@@ -271,7 +289,10 @@ $(function(){
 		<option value="option5">Option 5</option>
 		</select>
 	</p>
-	<br />
+	
+	
+
+	
 	
 	<select><option value="">Select to test IE6 bgiframe</opion></select><br /><br />
 	
